监控记录日志覆盖